# fastapi-sqlmodel-alembic

./: .env.template  .pre-commit-config.yaml  Dockerfile  LICENCE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  tooling.py
app/base/: crud.py  db.py  exceptions.py  models.py  routers.py
app/migrations/: env.py
app/migrations/versions/: 0a389a1b9dd0_band_and_song_models.py  b3524bab4656_songs.py  fcf36b658975_songs_soft_delete.py
app/songs/: crud.py  models.py  routes.py  schemas.py  services.py
tests/: conftest.py  test_songs.py
tests/songs/: conftest.py  factories.py  test_api_songs.py  test_songs.py
